Updates to fall in line with rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,5 +28,7 @@ SignalException:
   Enabled: false
 SingleSpaceBeforeFirstArg:
   Enabled: false
+Style/FileName:
+  Enabled: false
 TrailingComma:
   EnforcedStyleForMultiline: comma
