--- a/MAINTAINERS.toml
+++ b/MAINTAINERS.toml
@@ -41,3 +41,7 @@ project lead.
   [people.yzl]
     name = "Yvonne Lam"
     github = "yzl"
+
+  [people.ryanh]
+    name = "Ryan Hass"
+    github = "ryanh"
