--- a/.delivery/config.json
+++ b/.delivery/config.json
@@ -13,6 +13,15 @@
     "deploy",
     "smoke"
   ],
-  "build_nodes": {},
+  "job_dispatch": {
+    "version": "v2",
+    "filters" : {
+      "default" : {
+        "os" : ["linux"],
+        "platform" : ["ubuntu"],
+        "platform_version": ["16.04"]
+      }
+    }
+  },
   "dependencies": []
 }
