Update Expeditor config to 0.5.0 syntax
Signed-off-by: Tom Duffield <tom@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -25,4 +25,5 @@ merge_actions:
 
 artifact_actions:
   promoted_to_stable:
-    built_in:rollover_changelog:
+    - built_in:rollover_changelog
+    - built_in:notify_chefio_slack_channels
