--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,5 @@
 # Order is important. The last matching pattern has the most precedence.
 
-* @chef/jex-team
+*                 @chef/chef-foundation-reviewers
+.expeditor/**     @chef/jex-team
+*.md              @chef/docs-team
