Replace Jenkins omnibus build/test pipeline with Buildkite
Signed-off-by: Jeremiah Snapp <jeremiah@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -37,7 +37,12 @@ merge_actions:
       ignore_labels:
         - "Expeditor: Skip Changelog"
         - "Expeditor: Skip All"
-  - built_in:trigger_omnibus_release_build:
+  - trigger_pipeline:omnibus/release:
+      ignore_labels:
+        - "Expeditor: Skip Omnibus"
+        - "Expeditor: Skip All"
+      only_if: built_in:bump_version
+  - trigger_pipeline:omnibus/angry-release:
       ignore_labels:
         - "Expeditor: Skip Omnibus"
         - "Expeditor: Skip All"
