--- a/.expeditor/release-canary.omnibus.yml
+++ b/.expeditor/release-canary.omnibus.yml
@@ -1,12 +1,12 @@
 ---
-project-name: angry-omnibus-toolchain
+project-name: omnibus-toolchain
 config: omnibus.rb
 test-path: omnibus-test.sh
 test-path-windows: omnibus-test.ps1
 builder-to-testers-map:
-  aix-7.1-powerpc:
-    - aix-7.1-powerpc
-    - aix-7.2-powerpc
+  # aix-7.1-powerpc:
+  #   - aix-7.1-powerpc
+  #   - aix-7.2-powerpc
   debian-8-x86_64:
     - debian-8-x86_64
     - debian-9-x86_64
@@ -18,33 +18,33 @@ builder-to-testers-map:
   el-7-aarch64:
     - el-7-aarch64
     - el-8-aarch64
-  el-7-ppc64:
-    - el-7-ppc64
-  el-7-ppc64le:
-    - el-7-ppc64le
-  el-7-s390x:
-    - el-7-s390x
+  # el-7-ppc64:
+  #   - el-7-ppc64
+  # el-7-ppc64le:
+  #   - el-7-ppc64le
+  # el-7-s390x:
+  #   - el-7-s390x
   el-7-x86_64:
     - el-7-x86_64
     - el-8-x86_64
   freebsd-11-amd64:
     - freebsd-11-amd64
     - freebsd-12-amd64
-  mac_os_x-10.13-x86_64:
-    - mac_os_x-10.13-x86_64
-    - mac_os_x-10.14-x86_64
-    - mac_os_x-10.15-x86_64
-  sles-12-s390x:
-    - sles-12-s390x
+  # mac_os_x-10.13-x86_64:
+  #   - mac_os_x-10.13-x86_64
+  #   - mac_os_x-10.14-x86_64
+  #   - mac_os_x-10.15-x86_64
+  # sles-12-s390x:
+  #   - sles-12-s390x
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
   sles-15-aarch64:
     - sles-15-aarch64
-  solaris2-5.11-i386:
-    - solaris2-5.11-i386
-  solaris2-5.11-sparc:
-    - solaris2-5.11-sparc
+  # solaris2-5.11-i386:
+  #   - solaris2-5.11-i386
+  # solaris2-5.11-sparc:
+  #   - solaris2-5.11-sparc
   ubuntu-16.04-x86_64:
     - ubuntu-16.04-x86_64
     - ubuntu-18.04-x86_64
