--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -39,6 +39,8 @@ builder-to-testers-map:
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
+  sles-15-aarch64:
+    - sles-15-aarch64
   solaris2-5.11-i386:
     - solaris2-5.11-i386
   solaris2-5.11-sparc:
@@ -49,6 +51,7 @@ builder-to-testers-map:
     - ubuntu-20.04-x86_64
   ubuntu-18.04-aarch64:
     - ubuntu-18.04-aarch64
+    - ubuntu-20.04-aarch64
   windows-2012r2-i386:
     - windows-2012r2-i386
   windows-2012r2-x86_64:
