--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -26,6 +26,7 @@ builder-to-testers-map:
     - el-7-ppc64le
   el-7-s390x:
     - el-7-s390x
+    - el-8-s390x
   el-7-x86_64:
     - el-7-x86_64
     - el-8-x86_64
@@ -39,6 +40,7 @@ builder-to-testers-map:
     - mac_os_x-11.0-x86_64
   sles-12-s390x:
     - sles-12-s390x
+    - sles-15-s390x
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
