--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -3,6 +3,8 @@ project-name: omnibus-toolchain
 config: omnibus.rb
 test-path: omnibus-test.sh
 test-path-windows: omnibus-test.ps1
+test-channel: unstable
+test-version: 2.0.3+20200902165728
 builder-to-testers-map:
   el-7-s390x:
     - el-7-s390x
