--- a/.expeditor/release-canary.omnibus.yml
+++ b/.expeditor/release-canary.omnibus.yml
@@ -2,33 +2,35 @@
 project-name: omnibus-toolchain
 config: omnibus.rb
 test-path: omnibus-test.sh
+test-channel: stable
+test-version: 2.0.2
 test-path-windows: omnibus-test.ps1
 builder-to-testers-map:
   # aix-7.1-powerpc:
   #   - aix-7.1-powerpc
   #   - aix-7.2-powerpc
-  debian-8-x86_64:
-    - debian-8-x86_64
-    - debian-9-x86_64
-    - debian-10-x86_64
-  debian-10-aarch64:
-    - debian-10-aarch64
-  el-6-i686:
-    - el-6-i686
-  el-6-x86_64:
-    - el-6-x86_64
-  el-7-aarch64:
-    - el-7-aarch64
-    - el-8-aarch64
+  # debian-8-x86_64:
+  #   - debian-8-x86_64
+  #   - debian-9-x86_64
+  #   - debian-10-x86_64
+  # debian-10-aarch64:
+  #   - debian-10-aarch64
+  # el-6-i686:
+  #   - el-6-i686
+  # el-6-x86_64:
+  #   - el-6-x86_64
+  # el-7-aarch64:
+  #   - el-7-aarch64
+  #   - el-8-aarch64
   # el-7-ppc64:
   #   - el-7-ppc64
   # el-7-ppc64le:
   #   - el-7-ppc64le
   # el-7-s390x:
   #   - el-7-s390x
-  el-7-x86_64:
-    - el-7-x86_64
-    - el-8-x86_64
+  # el-7-x86_64:
+  #   - el-7-x86_64
+  #   - el-8-x86_64
   freebsd-11-amd64:
     - freebsd-11-amd64
     - freebsd-12-amd64
@@ -39,27 +41,27 @@ builder-to-testers-map:
   #   - mac_os_x-11.0-x86_64
   # sles-12-s390x:
   #   - sles-12-s390x
-  sles-12-x86_64:
-    - sles-12-x86_64
-    - sles-15-x86_64
-  sles-15-aarch64:
-    - sles-15-aarch64
+  # sles-12-x86_64:
+  #   - sles-12-x86_64
+  #   - sles-15-x86_64
+  # sles-15-aarch64:
+  #   - sles-15-aarch64
   # solaris2-5.11-i386:
   #   - solaris2-5.11-i386
   # solaris2-5.11-sparc:
   #   - solaris2-5.11-sparc
-  ubuntu-16.04-x86_64:
-    - ubuntu-16.04-x86_64
-    - ubuntu-18.04-x86_64
-    - ubuntu-20.04-x86_64
-  ubuntu-18.04-aarch64:
-    - ubuntu-18.04-aarch64
-    - ubuntu-20.04-aarch64
-  windows-2012r2-i386:
-    - windows-2012r2-i386
-  windows-2012r2-x86_64:
-    - windows-2012-x86_64
-    - windows-2012r2-x86_64
-    - windows-2016-x86_64
-    - windows-2019-x86_64
-    - windows-10-x86_64
+  # ubuntu-16.04-x86_64:
+  #   - ubuntu-16.04-x86_64
+  #   - ubuntu-18.04-x86_64
+  #   - ubuntu-20.04-x86_64
+  # ubuntu-18.04-aarch64:
+  #   - ubuntu-18.04-aarch64
+  #   - ubuntu-20.04-aarch64
+  # windows-2012r2-i386:
+  #   - windows-2012r2-i386
+  # windows-2012r2-x86_64:
+  #   - windows-2012-x86_64
+  #   - windows-2012r2-x86_64
+  #   - windows-2016-x86_64
+  #   - windows-2019-x86_64
+  #   - windows-10-x86_64
