--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -13,10 +13,10 @@ builder-to-testers-map:
     - debian-10-x86_64
   debian-10-aarch64:
     - debian-10-aarch64
-  el-6-i686:
-    - el-6-i686
-  el-6-x86_64:
-    - el-6-x86_64
+  # el-6-i686:
+  #   - el-6-i686
+  # el-6-x86_64:
+  #   - el-6-x86_64
   el-7-aarch64:
     - el-7-aarch64
     - el-8-aarch64
@@ -46,10 +46,10 @@ builder-to-testers-map:
     - sles-15-x86_64
   sles-15-aarch64:
     - sles-15-aarch64
-  solaris2-5.11-i386:
-    - solaris2-5.11-i386
-  solaris2-5.11-sparc:
-    - solaris2-5.11-sparc
+  # solaris2-5.11-i386:
+  #   - solaris2-5.11-i386
+  # solaris2-5.11-sparc:
+  #   - solaris2-5.11-sparc
   ubuntu-16.04-x86_64:
     - ubuntu-16.04-x86_64
     - ubuntu-18.04-x86_64
