--- a/.expeditor/angry-release.omnibus.yml
+++ b/.expeditor/angry-release.omnibus.yml
@@ -32,7 +32,7 @@ builder-to-testers-map:
     - el-8-x86_64
   freebsd-11-amd64:
     - freebsd-11-amd64
-    # - freebsd-12-amd64    disabled until gtar/tar tests are fixed on freebsd-12
+    - freebsd-12-amd64
   mac_os_x-10.13-x86_64:
     - mac_os_x-10.13-x86_64
     - mac_os_x-10.14-x86_64
