--- a/.expeditor/release-canary.omnibus.yml
+++ b/.expeditor/release-canary.omnibus.yml
@@ -1,8 +1,8 @@
 ---
 project-name: omnibus-toolchain
 config: omnibus.rb
-test-path: omnibus-test.sh
-test-path-windows: omnibus-test.ps1
+#test-path: omnibus-test.sh
+#test-path-windows: omnibus-test.ps1
 builder-to-testers-map:
   # aix-7.1-powerpc:
   #   - aix-7.1-powerpc
