Updating expeditor configurations
Signed-off-by: Swati Keshari <skeshari@msystechnologies.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -50,7 +50,7 @@ github:
 
 subscriptions:
   # These actions are taken, in order they are specified, anytime a Pull Request is merged.
-  - workload: pull_request_merged:{{agent_id}}:*
+  - workload: pull_request_merged:{{github_repo}}:{{release_branch}}:*
     actions:
       - built_in:bump_version:
           ignore_labels:
