--- a/.expeditor/angry-release.omnibus.yml
+++ b/.expeditor/angry-release.omnibus.yml
@@ -18,6 +18,8 @@ builder-to-testers-map:
     - el-6-x86_64
   el-7-aarch64:
     - el-7-aarch64
+    - amazon-2-aarch64
+  el-8-aarch64:
     - el-8-aarch64
   el-7-ppc64:
     - el-7-ppc64
@@ -28,6 +30,8 @@ builder-to-testers-map:
     - el-8-s390x
   el-7-x86_64:
     - el-7-x86_64
+    - amazon-2-x86_64
+  el-8-x86_64:
     - el-8-x86_64
   freebsd-11-amd64:
     - freebsd-11-amd64
@@ -39,6 +43,7 @@ builder-to-testers-map:
     - mac_os_x-11-x86_64
   mac_os_x-11-arm64:
     - mac_os_x-11-arm64
+    - mac_os_x-12-arm64
   sles-12-s390x:
     - sles-12-s390x
     - sles-15-s390x
@@ -51,12 +56,12 @@ builder-to-testers-map:
     - solaris2-5.11-i386
   solaris2-5.11-sparc:
     - solaris2-5.11-sparc
-  ubuntu-18.04-x86_64:
-    - ubuntu-18.04-x86_64
-    - ubuntu-20.04-x86_64
   ubuntu-18.04-aarch64:
     - ubuntu-18.04-aarch64
     - ubuntu-20.04-aarch64
+  ubuntu-18.04-x86_64:
+    - ubuntu-18.04-x86_64
+    - ubuntu-20.04-x86_64
   windows-2012r2-i386:
     - windows-2012r2-i386
   windows-2012r2-x86_64:
@@ -64,4 +69,5 @@ builder-to-testers-map:
     - windows-2012r2-x86_64
     - windows-2016-x86_64
     - windows-2019-x86_64
+    - windows-8-x86_64
     - windows-10-x86_64
