Fix platforms in canary pipelines
macos 12 arm64 worker doesn't exist in canary org

canary org's macos 11 arm64 omnibus worker uses omnibus-toolchain
so it cannot be used to build omnibus-toolchain

Signed-off-by: Jeremiah Snapp <jeremiah@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -35,13 +35,13 @@ pipelines:
   # the canary pipelines are used for testing by our *-buildkite-pipelines repos
   - omnibus/adhoc-canary:
       canary: true
-      definition: .expeditor/release-canary.omnibus.yml
+      definition: .expeditor/adhoc-canary.omnibus.yml
       env:
         - ADHOC: true
         - IGNORE_CACHE: true
   - omnibus/angry-adhoc-canary:
       canary: true
-      definition: .expeditor/angry-release-canary.omnibus.yml
+      definition: .expeditor/angry-adhoc-canary.omnibus.yml
       env:
         - ADHOC: true
         - IGNORE_CACHE: true
