--- a/.expeditor/adhoc-canary.omnibus.yml
+++ b/.expeditor/adhoc-canary.omnibus.yml
@@ -41,9 +41,9 @@ builder-to-testers-map:
     - mac_os_x-10.14-x86_64
     - mac_os_x-10.15-x86_64
     - mac_os_x-11-x86_64
-  mac_os_x-11-arm64:
-    - mac_os_x-11-arm64
-    - mac_os_x-12-arm64
+  # mac_os_x-11-arm64:        # canary org's macos 11 arm64 omnibus worker uses omnibus-toolchain so it cannot be used to build omnibus-toolchain
+  #   - mac_os_x-11-arm64
+  #   - mac_os_x-12-arm64     # canary org doesn't yet have a macos 12 arm64 omnibus worker
   # sles-12-s390x:
   #   - sles-12-s390x
   #   - sles-15-s390x
