--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -43,7 +43,7 @@ builder-to-testers-map:
     - mac_os_x-11-x86_64
   mac_os_x-11-arm64:
     - mac_os_x-11-arm64
-    - mac_os_x-12-arm64
+  #   - mac_os_x-12-arm64     # canary org doesn't yet have a macos 12 arm64 omnibus worker
   # sles-12-s390x:
   #   - sles-12-s390x
   #   - sles-15-s390x
