--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # Order is important. The last matching pattern has the most precedence.
 
-*                 @chef/jex-team @chef/chef-foundation-owners @chef/chef-foundation-approvers @chef/chef-foundation-reviewers
-.expeditor/       @chef/jex-team
+*                 @chef/eso-releng @chef/infra-packages @chef/chef-foundation-owners @chef/chef-foundation-approvers @chef/chef-foundation-reviewers
+.expeditor/       @chef/eso-releng @chef/infra-packages
 *.md              @chef/docs-team
