--- a/.expeditor/adhoc-canary.omnibus.yml
+++ b/.expeditor/adhoc-canary.omnibus.yml
@@ -7,11 +7,17 @@ builder-to-testers-map:
   # aix-7.1-powerpc:
   #   - aix-7.1-powerpc
   #   - aix-7.2-powerpc
+  amazon-2022-aarch64:
+    - amazon-2022-aarch64
+  amazon-2022-x86_64:
+    - amazon-2022-x86_64
   debian-9-x86_64:
     - debian-9-x86_64
     - debian-10-x86_64
+    - debian-11-x86_64
   debian-10-aarch64:
     - debian-10-aarch64
+    - debian-11-aarch64
   el-6-i686:
     - el-6-i686
   el-6-x86_64:
@@ -19,8 +25,6 @@ builder-to-testers-map:
   el-7-aarch64:
     - el-7-aarch64
     - amazon-2-aarch64
-  el-8-aarch64:
-    - el-8-aarch64
   # el-7-ppc64:
   #   - el-7-ppc64
   # el-7-ppc64le:
@@ -31,10 +35,11 @@ builder-to-testers-map:
   el-7-x86_64:
     - el-7-x86_64
     - amazon-2-x86_64
+  el-8-aarch64:
+    - el-8-aarch64
   el-8-x86_64:
     - el-8-x86_64
-  freebsd-11-amd64:
-    - freebsd-11-amd64
+  freebsd-12-amd64:
     - freebsd-12-amd64
     - freebsd-13-amd64
   mac_os_x-10.15-x86_64:
@@ -59,10 +64,12 @@ builder-to-testers-map:
   ubuntu-18.04-aarch64:
     - ubuntu-18.04-aarch64
     - ubuntu-20.04-aarch64
+    - ubuntu-22.04-aarch64
   ubuntu-16.04-x86_64:
     - ubuntu-16.04-x86_64
     - ubuntu-18.04-x86_64
     - ubuntu-20.04-x86_64
+    - ubuntu-22.04-x86_64
   windows-2012r2-i386:
     - windows-2012r2-i386
   windows-2012r2-x86_64:
