--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -3,6 +3,7 @@ project-name: angry-omnibus-toolchain
 config: omnibus.rb
 test-path: omnibus-test.sh
 test-path-windows: omnibus-test.ps1
+windows-64-msystem: UCRT64
 builder-to-testers-map:
   # aix-7.1-powerpc:
   #   - aix-7.1-powerpc
