Use temporary version of omnibus-buildkite-plugin for omnibus/release pipeline
This let's us use angry-omnibus-toolchain ppc64 builders to
build omnibus-toolchain.
It is a temporary solution until we have enough ppc64 and ppc64le builders
to build omnibus-toolchain and angry-omnibus-toolchain at the same time.

Signed-off-by: Jeremiah Snapp <jeremiah@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -19,6 +19,7 @@ pipelines:
   - omnibus/release:
       env:
         - IGNORE_CACHE: true
+        - OMNIBUS_BUILDKITE_PLUGIN_VERSION: c7512972948a79da243b37f5ea98aefbf4b3d83b
   - omnibus/adhoc:
       definition: .expeditor/release.omnibus.yml
       env:
