--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -100,3 +100,7 @@ subscriptions:
     actions:
       - built_in:rollover_changelog
       - built_in:notify_chefio_slack_channels
+pipelines:
+  - verify:
+      description: Pull Request validation tests
+      public: true
