testing adhoc with same buildkite plugin
Signed-off-by: Sean Simmons <ssimmons@progress.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -29,6 +29,7 @@ pipelines:
       env:
         - ADHOC: true
         - IGNORE_CACHE: true
+        - OMNIBUS_BUILDKITE_PLUGIN_VERSION: c7512972948a79da243b37f5ea98aefbf4b3d83b    
         - OMNIBUS_USE_INTERNAL_SOURCES: true
   - omnibus/angry-release:
       env:
