--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -29,7 +29,12 @@ pipelines:
       env:
         - ADHOC: true
         - IGNORE_CACHE: true
+        - OMNIBUS_BUILDKITE_PLUGIN_VERSION: 76dc28f29e5b5ddc83518eb42febfdde2528776c        
         - OMNIBUS_USE_INTERNAL_SOURCES: true
+    command:
+      - "echo artifactory endpoint is $ARTIFACTORY_ENDPOINT"
+      - "echo artifactory usn  is $ARTIFACTORY_USERNAME" 
+      - "echo artifactory pw is $ARTIFACTORY_PASSWORD"        
   - omnibus/angry-release:
       env:
         - IGNORE_CACHE: true
