--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -49,10 +49,11 @@ pipelines:
         - IGNORE_CACHE: true
         - OMNIBUS_BUILDKITE_PLUGIN_VERSION: 76dc28f29e5b5ddc83518eb42febfdde2528776c        
         - OMNIBUS_USE_INTERNAL_SOURCES: true
-    command:
-      - "echo artifactory endpoint is $ARTIFACTORY_ENDPOINT"
-      - "echo artifactory usn  is $ARTIFACTORY_USERNAME" 
-      - "echo artifactory pw is $ARTIFACTORY_PASSWORD"        
+      steps:
+        - commands:
+          - "echo artifactory endpoint is $ARTIFACTORY_ENDPOINT"
+          - "echo artifactory usn  is $ARTIFACTORY_USERNAME" 
+          - "echo artifactory pw is $ARTIFACTORY_PASSWORD"
   - omnibus/angry-adhoc-canary:
       canary: true
       definition: .expeditor/angry-adhoc-canary.omnibus.yml
