--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -49,6 +49,7 @@ pipelines:
         - IGNORE_CACHE: true
         - OMNIBUS_BUILDKITE_PLUGIN_VERSION: 028b78ceb200966a27aad55ce71eca89edb838f0
         - OMNIBUS_USE_INTERNAL_SOURCES: true
+        - PUBLISH_TO_ARTIFACTORY: true
   - omnibus/angry-adhoc-canary:
       canary: true
       definition: .expeditor/angry-adhoc-canary.omnibus.yml
