--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -53,6 +53,8 @@ builder-to-testers-map:
     - mac_os_x-11-arm64
   rocky-8-x86_64:
     - rocky-8-x86_64    
+  rocky-9-x86_64:
+    - rocky-9-x86_64
   #   - mac_os_x-12-arm64     # canary org doesn't yet have a macos 12 arm64 omnibus worker
   # sles-12-s390x:
   #   - sles-12-s390x
