--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -55,6 +55,8 @@ builder-to-testers-map:
     - rocky-8-x86_64
   rocky-8-aarch64:
     - rocky-8-aarch64
+  rocky-9-aarch64:
+    - rocky-9-aarch64
   #   - mac_os_x-12-arm64     # canary org doesn't yet have a macos 12 arm64 omnibus worker
   # sles-12-s390x:
   #   - sles-12-s390x
