--- a/.expeditor/angry-release.omnibus.yml
+++ b/.expeditor/angry-release.omnibus.yml
@@ -54,6 +54,8 @@ builder-to-testers-map:
     - mac_os_x-12-arm64
   rocky-9-x86_64:
     - rocky-9-x86_64
+  rocky-9-x86_64_disableSE:
+    - rocky-9-x86_64_disableSE  
   sles-12-s390x:
     - sles-12-s390x
     - sles-15-s390x
