--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -56,6 +56,8 @@ builder-to-testers-map:
     - rocky-8-x86_64
   rocky-9-x86_64:
     - rocky-9-x86_64
+  rocky-9-x86_64_disableSE:
+    - rocky-9-x86_64_disableSE  
   sles-12-s390x:
     - sles-12-s390x
     - sles-15-s390x
