--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -56,7 +56,9 @@ builder-to-testers-map:
   rocky-8-aarch64:
     - rocky-8-aarch64
   rocky-9-x86_64:
-    - rocky-9-x86_64  
+    - rocky-9-x86_64
+  rocky-9-aarch64:
+    - rocky-9-aarch64
   #   - mac_os_x-12-arm64     # canary org doesn't yet have a macos 12 arm64 omnibus worker
   # sles-12-s390x:
   #   - sles-12-s390x
