--- a/.expeditor/angry-release.omnibus.yml
+++ b/.expeditor/angry-release.omnibus.yml
@@ -50,6 +50,8 @@ builder-to-testers-map:
     - mac_os_x-12-x86_64
   mac_os_x-12-arm64:
     - mac_os_x-12-arm64
+  mac_os_x-13-arm64:
+    - mac_os_x-13-arm64   
   rocky-8-x86_64:
     - rocky-8-x86_64
   rocky-8-aarch64:
