--- a/.expeditor/adhoc-canary.omnibus.yml
+++ b/.expeditor/adhoc-canary.omnibus.yml
@@ -87,6 +87,6 @@ builder-to-testers-map:
     - windows-2016-x86_64
     - windows-2019-x86_64
     - windows-2022-x86_64
-    - windows-8-x86_64
+  #  - windows-8-x86_64
     - windows-10-x86_64
     - windows-11-x86_64
