--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -50,6 +50,8 @@ builder-to-testers-map:
     - mac_os_x-12-x86_64
   mac_os_x-12-arm64:
     - mac_os_x-12-arm64
+    - mac_os_x-13-arm64
+    - mac_os_x-14-arm64
   rocky-8-x86_64:
     - rocky-8-x86_64
   rocky-8-aarch64:
@@ -85,6 +87,6 @@ builder-to-testers-map:
     - windows-2016-x86_64
     - windows-2019-x86_64
     - windows-2022-x86_64
-    - windows-8-x86_64
+  #  - windows-8-x86_64
     - windows-10-x86_64
     - windows-11-x86_64
