--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -82,6 +82,10 @@ builder-to-testers-map:
     - ubuntu-18.04-x86_64
     - ubuntu-20.04-x86_64
     - ubuntu-22.04-x86_64
+  ubuntu-24.04-x86_64:
+    - ubuntu-24.04-x86_64
+  ubuntu-24.04-aarch64:
+    - ubuntu-24.04-aarch64
   windows-2012r2-x86_64:
     - windows-2012-x86_64
     - windows-2012r2-x86_64
