--- a/.expeditor/angry-adhoc-canary.omnibus.yml
+++ b/.expeditor/angry-adhoc-canary.omnibus.yml
@@ -86,12 +86,13 @@ builder-to-testers-map:
     - ubuntu-24.04-x86_64
   ubuntu-24.04-aarch64:
     - ubuntu-24.04-aarch64
-  windows-2012r2-x86_64:
-    - windows-2012-x86_64
-    - windows-2012r2-x86_64
+  windows-2019-x86_64:
+    # - windows-2012-x86_64
+    # - windows-2012r2-x86_64
     - windows-2016-x86_64
     - windows-2019-x86_64
     - windows-2022-x86_64
+    - windows-2025-x86_64
   #  - windows-8-x86_64
     - windows-10-x86_64
     - windows-11-x86_64
