--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -91,6 +91,7 @@ builder-to-testers-map:
     - windows-2016-x86_64
     - windows-2019-x86_64
     - windows-2022-x86_64
+    - windows-2025-x86_64
   #  - windows-8-x86_64
     - windows-10-x86_64
     - windows-11-x86_64
